Checkin feature/ITBMSPR-00001 19. PowerShell Fixes

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -67,8 +67,9 @@ jobs:
             ENV_FILE: .env.dev
             SQL_SERVER: ${{ secrets.SQL_SERVER_DEV }}
         run: |
-            $ENV_FILE = ".env.dev"
-            Start-Process -FilePath "docker-compose" -ArgumentList "-f docker-compose.yml --env-file $ENV_FILE -p dev up --build -d" -Verb RunAs -Wait
+            Write-Output "Using ENV_FILE=$env:ENV_FILE"
+            Write-Output "SQL_SERVER=$env:SQL_SERVER"
+            Start-Process -FilePath "docker-compose" -ArgumentList "-f docker-compose.yml --env-file $env:ENV_FILE -p dev up --build -d" -Verb RunAs -Wait
         shell: powershell
 
       - name: Execute DB Scripts for Dev
