Checkin feature/ITBMSPR-00001 20. PowerShell Fixes

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -74,32 +74,36 @@ jobs:
 
       - name: Execute DB Scripts for Dev
         env:
-          ENV_FILE: .env.dev
-          SQL_SERVER: $env:SQL_SERVER_DEV
-          DATABASE: $env:DATABASE_DEV
-          DBUID: $env:DBUID_DEV
-          DBPWD: $env:DBPWD_DEV
-          SPRINT_FOLDER: $env:SPRINT_FOLDER
-          SQL_PORT: 1401
+            ENV_FILE: .env.dev
+            SQL_SERVER: ${{ secrets.SQL_SERVER_DEV }}
+            DATABASE: ${{ secrets.DATABASE_DEV }}
+            DBUID: ${{ secrets.DBUID_DEV }}
+            DBPWD: ${{ secrets.DBPWD_DEV }}
+            SPRINT_FOLDER: ${{ secrets.SPRINT_FOLDER }}
+            SQL_PORT: 1401
         run: |
-          docker exec -i dev_sqlserver powershell -Command "
-            foreach ($file in Get-ChildItem -Path 'C:/var/opt/sqlserver/db/$SPRINT_FOLDER/Exec/*.sql') {
-              $SCRIPT_NAME = $file.Name
-              $EXISTS = sqlcmd -S $env:SQL_SERVER,$SQL_PORT -U $env:DBUID -P $env:DBPWD -d $env:DATABASE -Q 'SELECT COUNT(1) FROM ExecutedScripts WHERE ScriptName = ''$SCRIPT_NAME''' -h -1
-              if ($EXISTS -eq 0) {
-                Write-Output 'Executing $SCRIPT_NAME...'
-                sqlcmd -S $env:SQL_SERVER,$SQL_PORT -U $env:DBUID -P $env:DBPWD -d $env:DATABASE -i $file.FullName
-                if ($?) {
-                  sqlcmd -S $env:SQL_SERVER,$SQL_PORT -U $env:DBUID -P $env:DBPWD -d $env:DATABASE -Q 'INSERT INTO ExecutedScripts (ScriptName, Status) VALUES (''$SCRIPT_NAME'', ''Success'')'
+            Start-Process -FilePath "powershell.exe" -ArgumentList @"
+            docker exec -i dev_sqlserver powershell -Command '
+                foreach ($file in Get-ChildItem -Path "C:/var/opt/sqlserver/db/$SPRINT_FOLDER/Exec/*.sql") {
+                $SCRIPT_NAME = $file.Name
+                $EXISTS = sqlcmd -S $env:SQL_SERVER,$SQL_PORT -U $env:DBUID -P $env:DBPWD -d $env:DATABASE -Q "SELECT COUNT(1) FROM ExecutedScripts WHERE ScriptName = ''$SCRIPT_NAME''" -h -1
+                if ($EXISTS -eq 0) {
+                    Write-Output "Executing $SCRIPT_NAME..."
+                    sqlcmd -S localhost -U $env:DBUID -P $env:DBPWD -d $env:DATABASE -i $file.FullName
+                    if ($?) {
+                    sqlcmd -S localhost -U $env:DBUID -P $env:DBPWD -d $env:DATABASE -Q "INSERT INTO ExecutedScripts (ScriptName, Status) VALUES (''$SCRIPT_NAME'', ''Success'')"
+                    } else {
+                    sqlcmd -S localhost -U $env:DBUID -P $env:DBPWD -d $env:DATABASE -Q "INSERT INTO ExecutedScripts (ScriptName, Status) VALUES (''$SCRIPT_NAME'', ''Failure'')"
+                    exit 1
+                    }
                 } else {
-                  sqlcmd -S $env:SQL_SERVER,$SQL_PORT -U $env:DBUID -P $env:DBPWD -d $env:DATABASE -Q 'INSERT INTO ExecutedScripts (ScriptName, Status) VALUES (''$SCRIPT_NAME'', ''Failure'')'
-                  exit 1
+                    Write-Output "Skipping already executed script: $SCRIPT_NAME"
                 }
-              } else {
-                Write-Output 'Skipping already executed script: $SCRIPT_NAME'
-              }
-            }
-          "
+                }
+            '
+            "@ -NoNewWindow -Wait -Verb RunAs
+        shell: powershell
+
 
   cd_qa:
     name: Deploy to QA with Approval
