Checkin feature/ITBMSPR-00001 22. Unix Decoding

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -104,7 +104,7 @@ jobs:
             '
             "@
             ) -NoNewWindow -Wait -Verb RunAs
-        shell: powershell
+        shell: powershell #unix decoding added
 
 
 
