--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -61,50 +61,44 @@ jobs:
             Write-Output "ENV_FILE is missing or inaccessible."
             }
         shell: powershell 
-      
+
       - name: Start Dev Environment with Docker Compose
         env:
             ENV_FILE: .env.dev
-            SQL_SERVER: ${{ secrets.SQL_SERVER_DEV }}
         run: |
-            Write-Output "Using ENV_FILE=$env:ENV_FILE"
-            Write-Output "SQL_SERVER=$env:SQL_SERVER"
-            Start-Process -FilePath "docker-compose" -ArgumentList "-f docker-compose.yml --env-file $env:ENV_FILE -p dev up --build -d" -Verb RunAs -Wait
-        shell: powershell
-
-      - name: Execute DB Scripts for Dev
+            cmd.exe /c "
+            echo Using ENV_FILE=%ENV_FILE% &&
+            docker-compose -f docker-compose.yml --env-file %ENV_FILE% -p dev up --build -d
+            "
+        shell: cmd
+        
+-       name: Execute DB Scripts for Dev
         env:
             ENV_FILE: .env.dev
             SQL_SERVER: ${{ secrets.SQL_SERVER_DEV }}
             DATABASE: ${{ secrets.DATABASE_DEV }}
             DBUID: ${{ secrets.DBUID_DEV }}
             DBPWD: ${{ secrets.DBPWD_DEV }}
-            SQL_PORT: 1401
         run: |
-            Start-Process -FilePath "powershell.exe" -ArgumentList @(
-            "-Command",
-            @"
-            docker exec -i dev_sqlserver powershell -Command '
-                foreach (\$file in Get-ChildItem -Path \"C:/var/opt/sqlserver/db/$env:SPRINT_FOLDER/Exec/*.sql\") {
-                \$SCRIPT_NAME = \$file.Name
-                \$EXISTS = sqlcmd -S $env:SQL_SERVER,$env:SQL_PORT -U $env:DBUID -P $env:DBPWD -d $env:DATABASE -Q \"SELECT COUNT(1) FROM ExecutedScripts WHERE ScriptName = ''\$SCRIPT_NAME''\" -h -1
-                if (\$EXISTS -eq 0) {
-                    Write-Output \"Executing \$SCRIPT_NAME...\"
-                    sqlcmd -S $env:SQL_SERVER,$env:SQL_PORT -U $env:DBUID -P $env:DBPWD -d $env:DATABASE -i \$file.FullName
-                    if (\$?) {
-                    sqlcmd -S $env:SQL_SERVER,$env:SQL_PORT -U $env:DBUID -P $env:DBPWD -d $env:DATABASE -Q \"INSERT INTO ExecutedScripts (ScriptName, Status) VALUES (''\$SCRIPT_NAME'', ''Success'')\"
-                    } else {
-                    sqlcmd -S $env:SQL_SERVER,$env:SQL_PORT -U $env:DBUID -P $env:DBPWD -d $env:DATABASE -Q \"INSERT INTO ExecutedScripts (ScriptName, Status) VALUES (''\$SCRIPT_NAME'', ''Failure'')\"
-                    exit 1
-                    }
-                } else {
-                    Write-Output \"Skipping already executed script: \$SCRIPT_NAME\"
-                }
-                }
-            '
-            "@
-            ) -NoNewWindow -Wait -Verb RunAs
-        shell: powershell #unix decoding added
+            cmd.exe /c "
+            docker exec -i dev_sqlserver cmd.exe /c ^
+            for %f in (C:\\var\\opt\\sqlserver\\db\\%SPRINT_FOLDER%\\Exec\\*.sql) do ^
+            (
+                echo Processing %f &&
+                set SCRIPT_NAME=%~nxf &&
+                docker exec -i dev_sqlserver sqlcmd -S localhost -U %DBUID% -P %DBPWD% -d %DATABASE% -i %f &&
+                docker exec -i dev_sqlserver sqlcmd -S localhost -U %DBUID% -P %DBPWD% -d %DATABASE% -Q ^
+                "INSERT INTO ExecutedScripts (ScriptName, Status) VALUES ('%SCRIPT_NAME%', 'Success')" ||
+                (
+                echo Error occurred while executing %f &&
+                docker exec -i dev_sqlserver sqlcmd -S localhost -U %DBUID% -P %DBPWD% -d %DATABASE% -Q ^
+                "INSERT INTO ExecutedScripts (ScriptName, Status) VALUES ('%SCRIPT_NAME%', 'Failure')" &&
+                exit 1
+                )
+            )
+            "
+        shell: cmd
+
 
 
 
