Checkin feature/ITBMSPR-00001 24. changed to cmd

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -70,7 +70,7 @@ jobs:
             echo Using ENV_FILE=%ENV_FILE% &&
             docker-compose -f docker-compose.yml --env-file %ENV_FILE% -p dev up --build -d
             "
-        shell: cmd
+        shell: cmd #what happened?
         
 -       name: Execute DB Scripts for Dev
         env:
