--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -62,6 +62,12 @@ jobs:
             }
         shell: powershell 
 
+      - name: Test Docker Access
+        run: |
+            docker ps
+            docker info
+        shell: bash
+      
       - name: Start Dev Environment with Docker Compose
         env:
             ENV_FILE: .env.dev
