--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -66,7 +66,7 @@ jobs:
         run: |
             docker ps
             docker info
-        shell: bash
+        shell: bash # fixed runner let's see
       
       - name: Start Dev Environment with Docker Compose
         env:
