--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -69,10 +69,9 @@ jobs:
         shell: cmd # fixed runner let's see
       
       - name: Start Dev Environment with Docker Compose
-        env:
-            ENV_FILE: .env.dev
         run: |
-            cmd.exe /c "echo Using ENV_FILE=%ENV_FILE% && docker-compose -f docker-compose.yml --env-file %ENV_FILE% -p dev up --build -d"
+            echo Using ENV_FILE=%ENV_FILE%
+            docker-compose -f docker-compose.yml --env-file %ENV_FILE% -p dev up --build -d
         shell: cmd
         
       - name: Execute DB Scripts for Dev
