Checkin feature/ITBMSPR-00001 31. fixed runner

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -69,6 +69,8 @@ jobs:
         shell: cmd # fixed runner let's see
       
       - name: Start Dev Environment with Docker Compose
+        env:
+            ENV_FILE: .env.dev
         run: |
             echo Using ENV_FILE=%ENV_FILE%
             docker-compose -f docker-compose.yml --env-file %ENV_FILE% -p dev up --build -d
