Checkin feature/ITBMSPR-00001 32. fixed runner

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -68,6 +68,11 @@ jobs:
             docker info
         shell: cmd # fixed runner let's see
       
+      - name: Debug .env.dev File
+        run: |
+            type .env.dev
+        shell: cmd
+      
       - name: Start Dev Environment with Docker Compose
         env:
             ENV_FILE: .env.dev
