--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,19 +27,24 @@ jobs:
           $SPRINT_FOLDER = $BRANCH_NAME -replace '^feature/', ''
           Write-Output "SPRINT_FOLDER=$SPRINT_FOLDER" >> $env:GITHUB_ENV
       
-      - name: Generate .env.dev for Docker Compose
+      - name: Generate .env.dev File
         run: |
-            $content = @"
-            SQL_SERVER=$env:SQL_SERVER_DEV
-            DATABASE=$env:DATABASE_DEV
-            DBUID=$env:DBUID_DEV
-            DBPWD=$env:DBPWD_DEV
-            SQL_PORT=1401
-            APP_PORT=5001
-            FLASK_ENV=dev
-            "@
-            $content | Out-File -FilePath .env.dev -Encoding utf8 -NoNewline
-        shell: powershell
+            echo SQL_SERVER=${{ secrets.SQL_SERVER_DEV }} > .env.dev
+            echo DATABASE=${{ secrets.DATABASE_DEV }} >> .env.dev
+            echo DBUID=${{ secrets.DBUID_DEV }} >> .env.dev
+            echo DBPWD=${{ secrets.DBPWD_DEV }} >> .env.dev
+            echo SQL_PORT=1401 >> .env.dev
+            echo APP_PORT=5001 >> .env.dev
+            echo FLASK_ENV=dev >> .env.dev
+        shell: cmd
+      
+      - name: Debug Secrets
+        run: |
+            echo SQL_SERVER_DEV=${{ secrets.SQL_SERVER_DEV }}
+            echo DATABASE_DEV=${{ secrets.DATABASE_DEV }}
+            echo DBUID_DEV=${{ secrets.DBUID_DEV }}
+            echo DBPWD_DEV=${{ secrets.DBPWD_DEV }}
+        shell: bash
       
       - name: Verify Secret Access
         env:
