01. Apply .gitattributes rules to all files

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -78,6 +78,10 @@ jobs:
             type .env.dev
         shell: cmd
       
+      - name: Convert Line Endings to Unix
+        run: |
+            sed -i 's/\r$//' run-sqlserver.sh
+      
       - name: Start Dev Environment with Docker Compose
         env:
             ENV_FILE: .env.dev
