02. Apply .gitattributes rules to all files

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -80,7 +80,7 @@ jobs:
       
       - name: Convert Line Endings to Unix
         run: |
-            sed -i 's/\r$//' run-sqlserver.sh
+            dos2unix run-sqlserver.sh
       
       - name: Start Dev Environment with Docker Compose
         env:
