09. Apply .gitattributes rules to all files

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -89,27 +89,26 @@ jobs:
       - name: Execute DB Scripts for Dev
         env:
             ENV_FILE: .env.dev
-            SQL_SERVER: ${{ secrets.SQL_SERVER_DEV }}
-            DATABASE: ${{ secrets.DATABASE_DEV }}
-            DBUID: ${{ secrets.DBUID_DEV }}
-            DBPWD: ${{ secrets.DBPWD_DEV }}
+            SQL_SERVER: ${{ env.SQL_SERVER_DEV }}
+            DATABASE: ${{ env.DATABASE_DEV }}
+            DBUID: ${{ env.DBUID_DEV }}
+            DBPWD: ${{ env.DBPWD_DEV }}
+            SPRINT_FOLDER: ${{ env.SPRINT_FOLDER }}
+            SQL_PORT: 1401
         run: |
             docker exec -i dev_sqlserver /bin/bash -c "
             for file in /var/opt/sqlserver/db/${SPRINT_FOLDER}/Exec/*.sql; do
                 SCRIPT_NAME=\$(basename \$file)
-                EXISTS=\$(sqlcmd -S localhost -U $DBUID -P $DBPWD -d $DATABASE -Q \"SELECT COUNT(1) FROM ExecutedScripts WHERE ScriptName = '\$SCRIPT_NAME'\")
-                if [ \$EXISTS -eq 0 ]; then
+                EXISTS=\$(/opt/mssql-tools/bin/sqlcmd -S localhost -U \$DBUID -P \$DBPWD -d \$DATABASE -Q \"SELECT COUNT(1) FROM ExecutedScripts WHERE ScriptName = '\$SCRIPT_NAME'\" -h -1)
+                if [ \"\$EXISTS\" -eq 0 ]; then
                 echo 'Executing \$SCRIPT_NAME...'
-                sqlcmd -S localhost -U $DBUID -P $DBPWD -d $DATABASE -i \$file && \
-                sqlcmd -S localhost -U $DBUID -P $DBPWD -d $DATABASE -Q \"INSERT INTO ExecutedScripts (ScriptName, Status) VALUES ('\$SCRIPT_NAME', 'Success')\"
+                /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DBUID -P \$DBPWD -d \$DATABASE -i \$file && \
+                /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DBUID -P \$DBPWD -d \$DATABASE -Q \"INSERT INTO ExecutedScripts (ScriptName, Status) VALUES ('\$SCRIPT_NAME', 'Success')\"
                 else
                 echo 'Skipping already executed script: \$SCRIPT_NAME'
                 fi
             done
             "
-
-
-
 
   cd_qa:
     name: Deploy to QA with Approval
