13. Apply .gitattributes rules to all files

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -94,32 +94,12 @@ jobs:
             DBUID: ${{ env.DBUID_DEV }}
             DBPWD: ${{ env.DBPWD_DEV }}
             SPRINT_FOLDER: ${{ env.SPRINT_FOLDER }}
-            SQL_PORT: 1401
         run: |
             docker exec -i dev_sqlserver /bin/bash -c "
-            for file in /var/opt/sqlserver/db/${SPRINT_FOLDER}/Exec/*.sql; do
-                SCRIPT_NAME=\$(basename \$file)
-                echo 'Checking if \$SCRIPT_NAME has already been executed...'
-                EXISTS=\$(/opt/mssql-tools/bin/sqlcmd -S localhost -U \$DBUID -P \$DBPWD -d \$DATABASE -Q \"SELECT COUNT(1) FROM ExecutedScripts WHERE ScriptName = '\$SCRIPT_NAME'\" -h -1)
-                echo \"SQL Query to check script execution: SELECT COUNT(1) FROM ExecutedScripts WHERE ScriptName = '\$SCRIPT_NAME'\"
-                echo \"Result of EXISTS query: \$EXISTS\"        
-                if [ \"\$EXISTS\" -eq 0 ]; then
-                    echo 'Executing \$SCRIPT_NAME...'
-                    /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DBUID -P \$DBPWD -d \$DATABASE -i \$file
-                    if [ \$? -eq 0 ]; then
-                        echo \"Logging success for \$SCRIPT_NAME...\"
-                        /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DBUID -P \$DBPWD -d \$DATABASE -Q \"INSERT INTO ExecutedScripts (ScriptName, Status) VALUES ('\$SCRIPT_NAME', 'Success')\"
-                    else
-                        echo \"Logging failure for \$SCRIPT_NAME...\"
-                        /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DBUID -P \$DBPWD -d \$DATABASE -Q \"INSERT INTO ExecutedScripts (ScriptName, Status) VALUES ('\$SCRIPT_NAME', 'Failure')\"
-                        exit 1
-                    fi
-                else
-                    echo 'Skipping already executed script: \$SCRIPT_NAME'
-                fi
-            done
+            chmod +x /var/opt/sqlserver/db/execute-sql-scripts.sh && \
+            /var/opt/sqlserver/db/execute-sql-scripts.sh $SPRINT_FOLDER $DBUID $DBPWD $DATABASE
             "
-        shell: cmd
+        shell: bash
 
 
   cd_qa:
