--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -99,7 +99,7 @@ jobs:
                 echo 'Starting execution of SQL scripts in Sprint Folder: $SPRINT_FOLDER...'
             
                 # Navigate to the directory where the script is stored
-                cd /var/opt/mssql/db/${SPRINT_FOLDER}
+                cd /var/opt/sqlserver/db/${SPRINT_FOLDER}
             
                 # Make sure the SQL execution script has correct permissions
                 chmod +x execute-sql-scripts.sh
