--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,7 +9,7 @@ on:
     branches:
       - main
       - develop
-  workflow_dispatch: # For manual rollback triggers
+  workflow_dispatch: # For manual rollback triggers ad
 
 jobs:
   ci_dev:
