--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -95,18 +95,11 @@ jobs:
             DBPWD: ${{ env.DBPWD_DEV }}
             SPRINT_FOLDER: ${{ env.SPRINT_FOLDER }}
         run: |
-            docker exec -it dev_sqlserver sh -c "
-                echo 'Starting execution of SQL scripts in Sprint Folder: db...'
-            
-                # Navigate to the directory where the script is stored
-                cd /var/opt/sqlserver/db
-            
-                # Make sure the SQL execution script has correct permissions
-                chmod +x execute-sql-scripts.sh
-            
-                # Execute the SQL script file
-                ./execute-sql-scripts.sh
-            
+            docker exec -i dev_sqlserver bash -c "
+                echo 'Starting execution of SQL scripts in Sprint Folder: $SPRINT_FOLDER...'
+                cd /var/opt/mssql/db &&
+                chmod +x execute-sql-scripts.sh &&
+                SPRINT_FOLDER=${SPRINT_FOLDER} DATABASE=${DATABASE} DBUID=${DBUID} DBPWD=${DBPWD} ./execute-sql-scripts.sh
                 echo 'SQL script execution completed.'
             "
 
