--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -100,10 +100,10 @@ jobs:
             SPRINT_FOLDER: ${{ env.SPRINT_FOLDER }}
         run: |
             docker exec -i dev_sqlserver bash -c "
-                echo 'Starting execution of SQL scripts in Sprint Folder: $SPRINT_FOLDER...'
+                echo 'Starting execution of SQL scripts in Sprint Folder: ${SPRINT_FOLDER}...'
                 cd /var/opt/sqlserver/db &&
                 chmod +x execute-sql-scripts.sh &&
-                ./execute-sql-scripts.sh $SPRINT_FOLDER $DBUID $DBPWD $DATABASE
+                ./execute-sql-scripts.sh ${SPRINT_FOLDER} ${DBUID} ${DBPWD} ${DATABASE}
                 echo 'SQL script execution completed.'
             "
 
