41. fixed execute-sql-scripts.sh

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -106,6 +106,7 @@ jobs:
             chmod +x execute-sql-scripts.sh &&
             ./execute-sql-scripts.sh
             "
+        shell: bash
 
 
   cd_qa:
